@@ -140,6 +140,7 @@ be used at times to test reports for <I>future</I> public consumption.)
 <LI><A HREF="/data/reports/qcreports_db/output/GXD_CellLine_Obsolete.sql.rpt">Annotations to obsolete CL terms</A>
 <LI><A HREF="/data/reports/qcreports_db/output/GXD_DupPrimers.sql.rpt">Duplicate Primer Sets used in GXD</A>
 <LI><A HREF="/data/reports/qcreports_db/output/GXD_DuplicateSpecimenLabel.sql.rpt">Duplicate Specimen Labels used in GXD</A>
+<LI><A HREF="/data/reports/qcreports_db/output/GXD_NotRouted.rpt">Papers used by GXD that were Not Routed</A>
 <LI><A HREF="/data/reports/qcreports_db/output/GXD_GenotypeHemi.sql.rpt">Hemizygous Genotype Check</A>
 <LI><A HREF="/data/reports/qcreports_db/output/GXD_KnockInGene.sql.rpt">GXD Knock Ins where the assayed Gene is not the Gene which is mutated in the Genotype</A>
 <LI><A HREF="/data/reports/qcreports_db/output/GXD_SpecimenTypeConflict.rpt">Specimen Type (Hybridization) Conflict</A>
